--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     <section class="tools-grid">
         <!-- Image Compressor -->
         <div class="tool-card">
-            <a href="https://yourwebsite.com/image-compressor" class="tool-link">
+            <a href="/3D/img-compress.html" class="tool-link">
                 <i class="fas fa-file-image"></i>
                 <h3>Image Compressor</h3>
                 <p>Compress images without losing quality.</p>
