--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
         <!-- PDF Compressor -->
         <div class="tool-card">
-            <a href="https://yourwebsite.com/pdf-compressor" class="tool-link">
+            <a href="/3D/center2.html" class="tool-link">
                 <i class="fas fa-file-pdf"></i>
                 <h3>PDF Compressor</h3>
                 <p>Reduce PDF file size easily.</p>
